--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -14,7 +14,7 @@ html, body, #container{
 #banner-text {
 	position: absolute;
 	width: 100%;
-	top: 25%;
+	top: 23%;
 }
 
 #logout-button a {
@@ -22,7 +22,7 @@ html, body, #container{
 	position: absolute;
 	height: 32px;
 	width: 80px;
-	right: 20px;
+	left: 30px;
 	background: url('images/signout.png') no-repeat;
 	background-position: 25px 0px;
 	opacity: 0.7;
@@ -47,11 +47,11 @@ html, body, #container{
 }
 
 #login-button {
-	top: 30px;
+	top: 40px;
 	position: absolute;
 	height: 32px;
 	width: 80px;
-	right: 20px;
+	left: 110px;
 	background: url('images/signin.png') no-repeat;
 	background-position: 25px 0px;
 	opacity: 0.7;
@@ -64,11 +64,11 @@ html, body, #container{
 }
 
 #register-button {
-	top: 30px;
+	top: 40px;
 	position: absolute;
 	height: 32px;
 	width: 80px;
-	right: 100px;
+	left: 30px;
 	background: url('images/user.png') no-repeat;
 	background-position: 25px 0px;
 	opacity: 0.7;
@@ -88,7 +88,7 @@ html, body, #container{
 	display: none;
 	width: 300px;
 	top: -600px;
-	right: 20px;
+	left: 30px;
 	position: fixed;
 	z-index: 10;
 	padding: 20px 20px 20px 20px;
@@ -98,7 +98,7 @@ html, body, #container{
 	display: none;
 	width: 300px;
 	top: -300px;
-	right: 20px;
+	left: 110px;
 	position: fixed;
 	z-index: 10;
 	padding: 20px 20px 20px 20px;
